--- a/templates/wireguard.conf
+++ b/templates/wireguard.conf
@@ -9,6 +9,9 @@ SaveConfig = true
 [Peer]
 PublicKey = {{ peer.PublicKey }}
 AllowedIPs = {{ peer.AllowedIPs | sort | map('ansible.utils.ipaddr','host/prefix') | join(',') }}
+{% if peer.PresharedKey is defined %}
+PresharedKey = {{ peer.PresharedKey }}
+{% endif %}
 
 {% endfor %}
 # END OF PEERS BLOCK MANAGED BY ANSIBLE
