--- a/templates/wireguard.conf
+++ b/templates/wireguard.conf
@@ -5,7 +5,7 @@ ListenPort = {{ _wireguard_tunnel_item.value.ListenPort | default('51820') }}
 
 # BEGIN OF PEERS BLOCK MANAGED BY ANSIBLE
 {% for peer in _wireguard_tunnel_item.value.Peers | sort(attribute='PublicKey') %}
-[Peer]
+[Peer]{% if peer.name is defined %} # Name = {{ peer.name }}{% endif +%}
 PublicKey = {{ peer.PublicKey }}
 AllowedIPs = {{ peer.AllowedIPs | sort | map('ansible.utils.ipaddr','host/prefix') | join(',') }}
 {% if peer.PresharedKey is defined %}
