--- a/templates/wireguard.conf
+++ b/templates/wireguard.conf
@@ -1,10 +1,10 @@
 [Interface]
-PrivateKey = {{ _wireguard_PrivateKey }}
+PrivateKey = {{ _wireguard_tunnel_PrivateKey }}
 Address = {{ _wireguard_tunnel_item.value.Address }}
 ListenPort = {{ _wireguard_tunnel_item.value.ListenPort | default('51820') }}
 
 # BEGIN OF PEERS BLOCK MANAGED BY ANSIBLE
-{% for peer in _wireguard_tunnel_item.value.Peers | sort(attribute='PublicKey') %}
+{% for peer in peers_amended | sort(attribute='PublicKey') %}
 [Peer]{% if peer.name is defined %} # Name = {{ peer.name }}{% endif +%}
 PublicKey = {{ peer.PublicKey }}
 AllowedIPs = {{ peer.AllowedIPs | sort | map('ansible.utils.ipaddr','host/prefix') | join(',') }}
