--- a/templates/wireguard.conf
+++ b/templates/wireguard.conf
@@ -8,7 +8,7 @@ ListenPort = {{ _wireguard_tunnel_item.value.ListenPort | default('51820') }}
 [Peer]{% if peer.name is defined %} # Name = {{ peer.name }}{% endif +%}
 PublicKey = {{ peer.PublicKey }}
 AllowedIPs = {{ peer.AllowedIPs | sort | map('ansible.utils.ipaddr','host/prefix') | join(',') }}
-{% if peer.PresharedKey is defined %}
+{% if peer.PresharedKey | default('', true) | length > 0 %}
 PresharedKey = {{ peer.PresharedKey }}
 {% endif %}
 
